# pond

./: .cursorrules  .gitignore  CAN_TAB_SUMMARY.md  Cargo.toml  LICENSE.md  Leptos.toml  QUICKSTART.md  README.md  ROADMAP.md  build.sh  build_and_run.sh  flake.nix
apps/mind/: Cargo.toml  build.rs
apps/mind/protos/: bus.proto
apps/mind/src/: act.rs  debug_mode.rs  dream.rs  main.rs  morphology.rs  plan.rs
apps/pad/: Cargo.toml
apps/pad/src/: can_tab.rs  main.rs  scene.rs  splash.rs
crates/cad/: Cargo.toml  build.rs
crates/cad/models/: arm_assembly.py  j2_yoke.py  test_cube.py
crates/cad/models/actuators/: __init__.py  back_plate.py  base.py  gearbox.py  medium.py  nema23.py  rotor.py  shell.py  stator.py
crates/cad/models/arm/: __init__.py  base_column.py  common_params.py  forearm.py  j2_yoke_assembly.py  j3_yoke_assembly.py  upper_arm.py  wrist.py
crates/cad/src/: lib.rs
crates/can/: Cargo.toml  README.md
crates/can/src/: lib.rs  main.rs
crates/hello_pond/: Cargo.toml
crates/koi/: Cargo.toml
crates/koi/src/: chat.rs  lib.rs  policy.rs
crates/map/: Cargo.toml
crates/map/src/: client.rs  lib.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/sim/: Cargo.toml
crates/sim-view/: Cargo.toml  README.md
crates/sim-view/src/: lib.rs  main.rs
crates/sim/examples/: viewer.rs
crates/sim/src/: lib.rs  mesh_store.rs  server.rs
crates/ui_overlay/: Cargo.toml
crates/ui_overlay/src/: lib.rs
crates/vision_common/: Cargo.toml
crates/vision_common/src/: lib.rs
crates/vision_detection/: Cargo.toml
crates/vision_detection/src/: lib.rs
crates/vision_semseg/: Cargo.toml
crates/vision_semseg/src/: lib.rs
crates/vision_tags/: Cargo.toml
crates/vision_tags/src/: lib.rs
crates/vision_tracks/: Cargo.toml
crates/vision_tracks/src/: lib.rs
crates/web/: .dockerignore  Cargo.toml  Dockerfile  Leptos.toml
crates/web/src/: app.rs  lib.rs  main.rs  markdown.rs
crates/web/src/components/: layout.rs  mod.rs  navigation.rs  typography.rs
crates/web/src/content/: mod.rs
crates/web/src/content/pages/: firmware.rs  guides.rs  hardware.rs  home.rs  introduction.rs  mod.rs  reference.rs  software.rs
crates/web/style/: main.scss
docs/: brand.md  docs.json  package-lock.json  package.json  style.css
docs/guides/: pad-quickstart.mdx  quickstart.mdx  system-overview.mdx
docs/reference/: architecture.mdx
docs/reference/firmware/: firmware.mdx
docs/reference/hardware/: actuator.mdx  arm.mdx  cad.mdx  head.mdx
docs/reference/protocols/: rmd_l_protocol_v4.2.md  rmd_l_protocol_v4.2_formatted.md
docs/reference/software/: can.mdx  koi.mdx  mind.mdx  sim.mdx
docs/start/: changelog.mdx  introduction.mdx  license.mdx  showcase.mdx  welcome.mdx
notes/: arm.md  axial_flux_double_rotor.md  bom_frog.csv  cad.md  frog.md  head.md  koi.md  pad.md  pad_can.md  rana.md  web.md
public/: index.html
public/static/models/: arm_assembly.stl
