[workspace]

resolver = "2" # Use the modern resolver compatible with Edition 2021

members = [
    "crates/cad",
    # "crates/web", # Temporarily removed for Leptos standalone setup
    "apps/pad",
    "apps/mind",
    "crates/ui_overlay",
    "crates/vision_common",
    "crates/vision_semseg",
    "crates/vision_detection",
    "crates/vision_tags",
    "crates/vision_tracks",
    "crates/koi",
    "crates/sim",
    "crates/sim-view",
    "crates/map",
    "crates/can",
    # Crates will be added here, e.g.:
    # "crates/pond_core",
    # "crates/hw",
    # "crates/sim",
]

[profile.release]
lto = true
codegen-units = 1
# Leptos specific optimizations for WASM size
opt-level = 'z'
panic = "abort"

# Leptos configuration moved to crates/web/Leptos.toml for standalone setup
