[package]
name = "mind"
version = "0.1.0"
edition = "2021"
authors = ["Pond Developers <team@pond.local>"]
build = "build.rs"

[[bin]]
name = "mind"
path = "src/main.rs"


[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

tonic = { version = "0.10" }
prost = "0.12"
prost-types = "0.12"
dashmap = "5"
tokio-stream = { version = "0.1", features = ["net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
koi = { path = "../../crates/koi" }
sim = { path = "../../crates/sim", features = ["bus", "server"] }
map = { path = "../../crates/map", features = ["server", "client"] }
axum = { version = "0.7" }

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3"