[package]
name = "can"
version = "0.1.0"
edition = "2021"
description = "Simple SLCAN (Lawicel) interface over serial for macOS/Linux"
license = "MIT OR Apache-2.0"
default-run = "can"

[dependencies]
serialport = "4.4"
thiserror = "1.0"
hex = "0.4"
anyhow = "1.0"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
scopeguard = "1.2"
ctrlc = "3"

[dev-dependencies]


