[package]
name = "koi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
tensorrt-rs = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]