[package]
name = "map"
version = "0.1.0"
edition = "2021"

[features]
server = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:serde_json", "dep:zstd"]
client = ["dep:reqwest", "dep:serde_json", "dep:zstd"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
axum = { version = "0.7", features = ["json"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
zstd = { version = "0.13", optional = true }
bytes = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "map"
path = "src/lib.rs"

[[bin]]
name = "map-server"
path = "src/bin/server.rs"
required-features = ["server"]


