[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependency on web crate
web = { path = "../web", features = ["server"] }
# No longer depending on web crate at all
leptos = { version = "0.6", features = ["ssr"] } # Server-specific Leptos features
leptos_meta = { version = "0.6", features = ["ssr"] }
leptos_router = { version = "0.6", features = ["ssr"] }
leptos_axum = { version = "0.6" }
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
http = { version = "1" }

[features]
# No features needed for the server binary itself usually,
# it relies on features enabled in the lib crate it consumes.
