[package]
name = "sim-view"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.26", features = ["simd-stable"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
anyhow = "1"

[lib]
name = "sim_view"
path = "src/lib.rs"

[[bin]]
name = "sim-view"
path = "src/main.rs"

