[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_winit", "x11"] }
bevy_rapier3d = { version = "0.26", features = ["simd-stable"] }
anyhow = "1"
rerun = { version = "0.23", optional = true }
quick-xml = "0.31"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tobj = "4"
axum = { version = "0.7", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
# When enabled the sim exposes sensor/actuator updates via Pond bus Envelope.
bus = []
# Enable Rerun logging
viz = ["rerun"]
# Enable WebSocket server for remote viewing
server = ["dep:axum", "dep:tokio-tungstenite", "dep:tower-http"]