[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
log = "0.4"

# Client-side specific dependencies
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = { version = "0.2.92" }
web-sys = { version = "0.3", features = ["Document", "Element", "Window", "HtmlElement"] }

[features]
# Keep the hydrate feature for compatibility
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]

# Server-side rendering functionality
server = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
